cluster/core/portainer-system/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: portainer-system
  labels:
    goldilocks.fairwinds.com/enabled: 'true'
